# electric-sql-client

./: Cargo.toml  LICENSE  README.md
examples/: simple.rs
src/: lib.rs
