[package]
name = "electric-sql-client"
version = "0.2.0"
edition = "2021"
description = "An Electric client implemetation"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }

[lib]
name = "electric_sql_client"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"
