[package]
name = "electric-sql-client"
version = "0.2.1"
authors = ["Jihchi Lee <achi@987.tw>"]
edition = "2021"
description = "An Electric client implemetation"
documentation = "https://docs.rs/electric-sql-client"
homepage = "https://github.com/jihchi/electric-sql-client"
repository = "https://github.com/jihchi/electric-sql-client"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.9" }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }

[lib]
name = "electric_sql_client"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"
